5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1680_1952.log
== TEST (2019-05-02 15:32:32) 
-- CODE:
salarioBruto = float(inpu("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 8 / 100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 9 / 100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 11 / 100)
	
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif (salarioBruto - contribuicaoPrevidenciaria) == 1903.99 and (salarioBruto - contribuicaoPrevidenciaria) <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) == 2826.66 and (salarioBruto - contribuicaoPrevidenciaria) <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4.664,68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) > 4.664,68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido salariobruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
File "XXXX", line 24
    elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4.664,68:
                                                                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:33:29) 
-- CODE:
salarioBruto = float(inpu("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 8 / 100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 9 / 100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 11 / 100)
	
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif (salarioBruto - contribuicaoPrevidenciaria) == 1903.99 and (salarioBruto - contribuicaoPrevidenciaria) <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) == 2826.66 and (salarioBruto - contribuicaoPrevidenciaria) <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido salariobruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
File "XXXX", line 31
    salarioLiquido salariobruto - contribuicaoPrevidenciaria - impostoRenda
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:33:45) 
-- CODE:
salarioBruto = float(inpu("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 8 / 100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 9 / 100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 11 / 100)
	
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif (salarioBruto - contribuicaoPrevidenciaria) == 1903.99 and (salarioBruto - contribuicaoPrevidenciaria) <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) == 2826.66 and (salarioBruto - contribuicaoPrevidenciaria) <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
File "XXXX", line 31
    salarioLiquido salarioBruto - contribuicaoPrevidenciaria - impostoRenda
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:34:01) 
-- CODE:
salarioBruto = float(inpu("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 8 / 100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 9 / 100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 11 / 100)
	
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif (salarioBruto - contribuicaoPrevidenciaria) == 1903.99 and (salarioBruto - contribuicaoPrevidenciaria) <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) == 2826.66 and (salarioBruto - contribuicaoPrevidenciaria) <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    salarioBruto = float(inpu("Valor do Salario Bruto: "))
NameError: name 'inpu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:34:14) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 8 / 100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 9 / 100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 11 / 100)
	
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif (salarioBruto - contribuicaoPrevidenciaria) == 1903.99 and (salarioBruto - contribuicaoPrevidenciaria) <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) == 2826.66 and (salarioBruto - contribuicaoPrevidenciaria) <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 31, in <module>
    salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda
TypeError: unsupported operand type(s) for -: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:35:10) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 8 / 100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 9 / 100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	contribuicaoPrevidenciaria = salarioBruto - (salarioBruto * 11 / 100)
	
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif (salarioBruto - contribuicaoPrevidenciaria) == 1903.99 and (salarioBruto - contribuicaoPrevidenciaria) <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) == 2826.66 and (salarioBruto - contribuicaoPrevidenciaria) <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif (salarioBruto - contribuicaoPrevidenciaria) == 3751.05 and (salarioBruto - contribuicaoPrevidenciaria) <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif (salarioBruto - contribuicaoPrevidenciaria) > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 31, in <module>
    salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda
TypeError: unsupported operand type(s) for -: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:41:35) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	descontoContribuicao = salarioBruto * (8/100)
	salarioBase = salarioBruto - descontoContribuicao
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	descontoContribuicao = salarioBruto * (9/100)
	salarioBase = salarioBruto - descontoContribuicao	
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	descontoContribuicao = salarioBruto * (11/100)
	salarioBase = salarioBruto - descontoContribuicao	
		
# Cálculo do Imposto de Renda

if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
	impostoRenda = "Isento"

elif salarioBase == 1903.99 and salarioBase <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif salarioBase == 2826.66 and salarioBase <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif salarioBase == 3751.05 and salarioBase <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif salarioBase > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    if (salarioBruto - contribuicaoPrevidenciaria) <= 1903.98:
NameError: name 'contribuicaoPrevidenciaria' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:41:57) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	descontoContribuicao = salarioBruto * (8/100)
	salarioBase = salarioBruto - descontoContribuicao
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	descontoContribuicao = salarioBruto * (9/100)
	salarioBase = salarioBruto - descontoContribuicao	
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	descontoContribuicao = salarioBruto * (11/100)
	salarioBase = salarioBruto - descontoContribuicao	
		
# Cálculo do Imposto de Renda

if salarioBase <= 1903.98:
	impostoRenda = "Isento"

elif salarioBase == 1903.99 and salarioBase <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif salarioBase == 2826.66 and salarioBase <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif salarioBase == 3751.05 and salarioBase <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif salarioBase > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 34, in <module>
    salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda
NameError: name 'contribuicaoPrevidenciaria' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:42:53) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))
salarioBase = salarioBruto - descontoContribuicao

# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	descontoContribuicao = salarioBruto * (8/100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	descontoContribuicao = salarioBruto * (9/100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	descontoContribuicao = salarioBruto * (11/100)
		
# Cálculo do Imposto de Renda

if salarioBase <= 1903.98:
	impostoRenda = "Isento"

elif salarioBase == 1903.99 and salarioBase <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif salarioBase == 2826.66 and salarioBase <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif salarioBase == 3751.05 and salarioBase <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif salarioBase > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

print ("Salario liquido = R$".round(salarioLiquido,2))

print ("Salario liquido = R$",salarioliquido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    salarioBase = salarioBruto - descontoContribuicao
NameError: name 'descontoContribuicao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:43:38) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))


# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	descontoContribuicao = salarioBruto * (8/100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	descontoContribuicao = salarioBruto * (9/100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	descontoContribuicao = salarioBruto * (11/100)
		
# Cálculo do Imposto de Renda

if salarioBase <= 1903.98:
	impostoRenda = "Isento"

elif salarioBase == 1903.99 and salarioBase <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif salarioBase == 2826.66 and salarioBase <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif salarioBase == 3751.05 and salarioBase <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif salarioBase > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

salarioBase = salarioBruto - descontoContribuicao

print ("Salario liquido = R$".round(salarioLiquido,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    if salarioBase <= 1903.98:
NameError: name 'salarioBase' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:46:13) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))


# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	descontoContribuicao = salarioBruto * (8/100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	descontoContribuicao = salarioBruto * (9/100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	descontoContribuicao = salarioBruto * (11/100)
elif  salarioBruto > 5531.31:
	descontoContribuicao = 608.44
		
# Cálculo do Imposto de Renda

if salarioBase <= 1903.98:
	impostoRenda = "Isento"

elif salarioBase == 1903.99 and salarioBase <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif salarioBase == 2826.66 and salarioBase <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif salarioBase == 3751.05 and salarioBase <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif salarioBase > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda

salarioBase = salarioBruto - descontoContribuicao

print ("Salario liquido = R$".round(salarioLiquido,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    if salarioBase <= 1903.98:
NameError: name 'salarioBase' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:46:38) 
-- CODE:
salarioBruto = float(input("Valor do Salario Bruto: "))


# Cálculo da Contribuição Previdenciaria
if salarioBruto <= 1659.38:
	descontoContribuicao = salarioBruto * (8/100)
	
elif  salarioBruto == 1659.39 and salarioBruto <= 2765.66:
	descontoContribuicao = salarioBruto * (9/100)
	
elif  salarioBruto == 2765.67 and salarioBruto <= 5531.31:
	descontoContribuicao = salarioBruto * (11/100)
elif  salarioBruto > 5531.31:
	descontoContribuicao = 608.44
		
salarioBase = salarioBruto - descontoContribuicao

# Cálculo do Imposto de Renda

if salarioBase <= 1903.98:
	impostoRenda = "Isento"

elif salarioBase == 1903.99 and salarioBase <= 2826.65:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 7.5 / 100)
	
elif salarioBase == 2826.66 and salarioBase <= 3751.05:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 15 / 100)

elif salarioBase == 3751.05 and salarioBase <= 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 22.5 / 100)
	
elif salarioBase > 4664.68:
	impostoRenda =  (salarioBruto - contribuicaoPrevidenciaria) - ((salarioBruto - contribuicaoPrevidenciaria) * 27.5 / 100)

#Salario líquido
salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda



print ("Salario liquido = R$".round(salarioLiquido,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 36, in <module>
    salarioLiquido = salarioBruto - contribuicaoPrevidenciaria - impostoRenda
NameError: name 'contribuicaoPrevidenciaria' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
